[package]
name = "vas-quod"
version = "0.1.0"
authors = ["flouthoc <https://twitter.com/flouthoc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "deps-serde"]
deps-serde = ["chrono/serde", "url/serde"]

[dependencies]
getopts = "0.2"
nix = "0.19.1"
simple-error = "0.2.2"
clap = "3.0.0-beta.2"
chrono = "0.4.7"
serde = { version = "1.0.124", features = ["derive"], optional = true }
url = "2.1.0"
serde-value = "0.7.0"
serde_json = "1.0.64"
serde_derive = "1.0.125"
rtnetlink = "0.8.0"
libocispec = { git = "https://github.com/containers/libocispec", branch="main"}
